tests/typescript/pos/objects/obj-07.ts

/*@ a :: { d: { number | v > 0 } } */
var a:Object  = { d : 1   };


