tests/typescript/neg/objects/obj-07.ts

/*@ a :: { d: { number | v > 0 } } */
var a  = { };


